--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Nice🔥">
-<meta property="og:description" content="💥Good💥">
-<meta property="og:image" content="https://img4.goodfon.ru/wallpaper/nbig/f/dc/podsolnukh-priroda-tsvet.jpg">
+<meta property="og:title" content="🔥¡Increíble noticia para todos los hombres!🍆">
+<meta property="og:description" content="💥Todas las chicas abrirán las piernas 👍">
+<meta property="og:image" content="https://i.imgur.com/EQACN3G.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
